# kosmoi

./: .agent_rules.md  .dockerignore  .gitignore  .mcp.json  .replit  AGENTS.md  About Us Content  AboutUsContent  BUILD_INSTRUCTIONS.md  BlogPost.jsx  CLEANUP_REPORT.md  CLOUD_DEPLOY.md  CRM Script Update  Create Real Estate Schema  Create Stripe Payment Link  Create Stripe Payment Link (Node.js)  Create universal_proof.txt  Dockerfile.worker  Draft Welcome Post  Email Content for Lotus Wellness Retreat  Implement Task Creation Logging  Insert Leads  Integrate AboutUs Component  Integrate Mock Cleaners into CleaningServiceList.jsx  Integrate Mock Data into React Component  JANUARY_2026_ROADMAP.md  Kosmoi Welcome Post  Leads Data  MASTER_MIGRATION.sql  One Dollar Product Documentation  PROJECT_MAP.md  README.md  ROADMAP.md  SEO Titles JSON  SPEC.md  SWARM_PROTOCOLS.md  SamuiStarterPack.tsx  Save Email Draft  Simulate CRM Data Entry  TASKS.md  (+226 more)
.claude/: launch.json
.playwright-cli/: page-2026-03-09T11-53-44-930Z.yml  page-2026-03-09T11-54-47-050Z.yml  page-2026-03-09T11-55-38-671Z.yml  page-2026-03-09T11-55-40-462Z.yml  page-2026-03-09T11-56-08-805Z.yml  page-2026-03-09T11-56-11-204Z.yml  page-2026-03-09T11-56-44-605Z.yml  page-2026-03-09T11-56-51-812Z.yml  page-2026-03-09T11-58-21-516Z.yml  page-2026-03-09T11-58-24-699Z.yml  page-2026-03-09T11-58-24-890Z.yml  (+21 more)
backend-agents/: env.example  pyproject.toml  start.sh
backend-agents/src/: check_env.py  ingest_tutorial.py  main.py  test_api_e2e.py  verify_setup.py
backend-agents/src/tools/: video_rag.py
docs/: AGENTS.md  (+9 more)
(+1710 files in other folders)
